--- a/src/static/fontawesome/scss/_path.scss
+++ b/src/static/fontawesome/scss/_path.scss
@@ -3,13 +3,13 @@
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url('#{$fa-font-path}/fontawesome-webfont.eot?v=#{$fa-version}');
-  src: url('#{$fa-font-path}/fontawesome-webfont.eot?#iefix&v=#{$fa-version}') format('embedded-opentype'),
-    url('#{$fa-font-path}/fontawesome-webfont.woff2?v=#{$fa-version}') format('woff2'),
-    url('#{$fa-font-path}/fontawesome-webfont.woff?v=#{$fa-version}') format('woff'),
-    url('#{$fa-font-path}/fontawesome-webfont.ttf?v=#{$fa-version}') format('truetype'),
-    url('#{$fa-font-path}/fontawesome-webfont.svg?v=#{$fa-version}#fontawesomeregular') format('svg');
-//  src: url('#{$fa-font-path}/FontAwesome.otf') format('opentype'); // used when developing fonts
+  src: url(static('fontawesome/fonts/fontawesome-webfont.eot?v=#{$fa-version}'));
+  src: url(static('fontawesome/fonts/fontawesome-webfont.eot?#iefix&v=#{$fa-version}')) format('embedded-opentype'),
+    url(static('fontawesome/fonts/fontawesome-webfont.woff2?v=#{$fa-version}')) format('woff2'),
+    url(static('fontawesome/fonts/fontawesome-webfont.woff?v=#{$fa-version}')) format('woff'),
+    url(static('fontawesome/fonts/fontawesome-webfont.ttf?v=#{$fa-version}')) format('truetype'),
+    url(static('fontawesome/fonts/fontawesome-webfont.svg?v=#{$fa-version}#fontawesomeregular')) format('svg');
+//  src: url(static('fontawesome/fonts/FontAwesome.otf') format('opentype'); // used when developing fonts
   font-weight: normal;
   font-style: normal;
 }
