--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -159,6 +159,7 @@
                     {% for line in items.positions %}
                         <div class="row-fluid product-row">
                             <div class="col-md-4 col-xs-6">
+                                {{ line.positionid }}
                                 <strong>{{ line.item.name }}</strong>
                                 {% if line.variation %}
                                     – {{ line.variation }}
