Do not group positions in control view

--- a/src/pretix/control/templates/pretixcontrol/order/change.html
+++ b/src/pretix/control/templates/pretixcontrol/order/change.html
@@ -43,6 +43,7 @@
             <div class="panel panel-default items">
                 <div class="panel-heading">
                     <h3 class="panel-title">
+                        #{{ position.positionid }} –
                         <strong>{{ position.item.name }}</strong>
                         {% if position.variation %}
                             – {{ position.variation }}
