--- a/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
@@ -30,7 +30,7 @@
             <div class="download-desktop">
                 {% for b in download_buttons %}
                     <a href="{% eventurl event "presale:event.order.download" secret=order.secret order=order.code output=b.identifier position=line.id %}"
-                            class="btn btn-default btn-sm">
+                            class="btn btn-default btn-sm" data-asyncdownload>
                         <span class="fa fa-download"></span> {{ b.text }}
                     </a>
                 {% endfor %}
@@ -92,7 +92,7 @@
             <div class="download-mobile">
                 {% for b in download_buttons %}
                     <a href="{% eventurl event "presale:event.order.download" secret=order.secret order=order.code output=b.identifier position=line.id %}"
-                       class="btn btn-default btn-sm">
+                       class="btn btn-default btn-sm" data-asyncdownload>
                         <span class="fa fa-download"></span> {{ b.text }}
                     </a>
                 {% endfor %}
