--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -29,8 +29,7 @@
                 </a>
             {% else %}
                 <a href="{% eventurl event "presale:event.index" %}">{{ event.name }}</a>
-                <small>{{ event.date_from|date:"DATE_FORMAT" }}{% if event.settings.show_date_to %} –
-                    {{ event.date_to|date:"DATE_FORMAT" }}{% endif %}</small>
+                <small>{{ event.get_date_range_display }}</small>
             {% endif %}
         </h1>
         <div class="pull-right loginbox">
