--- a/src/pretix/control/templates/pretixcontrol/items/category.html
+++ b/src/pretix/control/templates/pretixcontrol/items/category.html
@@ -7,11 +7,25 @@
 	<form action="" method="post" class="form-horizontal">
 		{% csrf_token %}
         {% bootstrap_form_errors form %}
-		<fieldset>
-			<legend>{% trans "General information" %}</legend>
-			{% bootstrap_field form.name layout="horizontal" %}
-			{% bootstrap_field form.description layout="horizontal" %}
-		</fieldset>
+        <div class="row">
+            <div class="col-xs-12 col-lg-10">
+                <fieldset>
+                    <legend>{% trans "General information" %}</legend>
+                    {% bootstrap_field form.name layout="horizontal" %}
+                    {% bootstrap_field form.description layout="horizontal" %}
+                </fieldset>
+            </div>
+            <div class="col-xs-12 col-lg-2">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            {% trans "Category history" %}
+                        </h3>
+                    </div>
+                    {% include "pretixcontrol/includes/logs.html" with obj=category %}
+                </div>
+            </div>
+        </div>
 		<div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
                 {% trans "Save" %}
