--- a/src/pretix/control/templates/pretixcontrol/organizers/detail.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/detail.html
@@ -3,19 +3,131 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Organizer" %}{% endblock %}
 {% block content %}
-	<h1>{% trans "Organizer" %}</h1>
-    <form action="" method="post" class="form-horizontal">
-        {% csrf_token %}
-        {% bootstrap_form_errors form %}
-        <fieldset>
-            <legend>{% trans "General information" %}</legend>
-            {% bootstrap_field form.name layout="horizontal" %}
-            {% bootstrap_field form.slug layout="horizontal" %}
-        </fieldset>
-        <div class="form-group submit-group">
-            <button type="submit" class="btn btn-primary btn-save">
-                {% trans "Save" %}
-            </button>
+    <h1>
+        {% blocktrans with name=organizer.name %}Organizer: {{ name }}{% endblocktrans %}
+        <a href="{% url "control:organizer.edit" organizer=organizer.slug %}"
+                class="btn btn-default">
+            <span class="fa fa-edit"></span>
+            {% trans "Edit" %}
+        </a>
+    </h1>
+    <div class="row">
+        <div class="{% if request.orgaperm.can_change_permissions %}col-lg-6{% endif %} col-xs-12">
+            <fieldset>
+                <legend>{% trans "Events" %}</legend>
+                {% if events|length == 0 %}
+                    <p>
+                        <em>{% trans "You currently do not have access to any events." %}</em>
+                    </p>
+                {% else %}
+                    <table class="table table-condensed table-hover">
+                        <thead>
+                        <tr>
+                            <th>{% trans "Event name" %}</th>
+                            <th>{% trans "Start date" %}</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for e in events %}
+                            <tr>
+                                <td>
+                                    <strong><a href="{% url "control:event.index" organizer=e.organizer.slug event=e.slug %}">{{ e.name }}</a></strong>
+                                </td>
+                                <td>{{ e.get_date_from_display }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                {% endif %}
+                <a href="{% url "control:events.add" %}" class="btn btn-default">
+                    <span class="fa fa-plus"></span>
+                    {% trans "Create a new event" %}
+                </a>
+            </fieldset>
         </div>
-    </form>
+
+        {% if request.orgaperm.can_change_permissions %}
+            <div class="col-lg-6 col-xs-12">
+                <form action="" method="post" class="form-horizontal form-permissions">
+                    {% csrf_token %}
+                    <fieldset>
+                        <legend>{% trans "Team" %}</legend>
+                        <p>
+                            {% blocktrans trimmed %}
+                                You can use the following list to control who can create new events in the name of this
+                                organizer and who can add more people to this list. This does <strong>not</strong>
+                                control who has access to a particular event. You can control the access to an
+                                event in the "Permissions" section of the event's settings. A user does not need to be
+                                on the list here to get access to an event.
+                            {% endblocktrans %}
+                        </p>
+
+                        {% bootstrap_formset_errors formset %}
+                        {{ formset.management_form }}
+                        <div class="table-responsive">
+                            <table class="table table-striped table-condensed">
+                                <thead>
+                                <tr>
+                                    <th>{% trans "User" %}</th>
+                                    <th>{% trans "Create events" %}</th>
+                                    <th>{% trans "Change permissions" %}</th>
+                                    <th>{% trans "Delete" %}</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for form in formset %}
+                                    <tr>
+                                        <td>
+                                            {{ form.id }}
+                                            {% if form.instance.user %}
+                                                {{ form.instance.user }}
+                                            {% else %}
+                                                {{ form.instance.invite_email }}
+                                                <span class="fa fa-envelope-o" data-toggle="tooltip"
+                                                        title="{% trans "invited, pending response" %}"></span>
+                                            {% endif %}
+                                        </td>
+                                        <td>{{ form.can_create_events }}</td>
+                                        <td>{{ form.can_change_permissions }}</td>
+                                        <td>{{ form.DELETE }}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                                <tfoot>
+                                <tr>
+                                    <td colspan="9">
+                                        <strong>{% trans "Adding a new user" %}</strong><br>
+                                        {% blocktrans trimmed %}
+                                            To add a new user, you can enter their email address here. If they already have a
+                                            pretix account, they will immediately be added to the team. Otherwise, they will
+                                            be sent an email with an invitation.
+                                        {% endblocktrans %}
+                                    </td>
+
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="row-fluid">
+                                            <div class="col-sm-12">
+                                                {% bootstrap_field add_form.user layout='inline' %}
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td>{{ add_form.can_create_events }}</td>
+                                    <td>{{ add_form.can_change_permissions }}</td>
+                                </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+                        <div class="form-group submit-group">
+                            <button type="submit" class="btn btn-primary btn-save">
+                                {% trans "Save" %}
+                            </button>
+                        </div>
+
+                    </fieldset>
+                </form>
+            </div>
+        {% endif %}
+    </div>
 {% endblock %}
