--- a/src/pretix/control/templates/pretixcontrol/events/create_base.html
+++ b/src/pretix/control/templates/pretixcontrol/events/create_base.html
@@ -6,22 +6,33 @@
 	<h1>{% trans "Create a new event" %} <small>{% blocktrans trimmed with step=wizard.steps.step1 %}
         Step {{ step }}
     {% endblocktrans %}</small></h1>
-    <form action="" method="post" class="form-horizontal">
-        {% csrf_token %}
-        {{ wizard.management_form }}
-        {% bootstrap_form_errors form %}
-        {% block form %}
-        {% endblock %}
-        <div class="form-group submit-group">
-            {% if wizard.steps.prev %}
-                <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}"
-                        class="btn btn-default btn-lg pull-left">
-                    {% trans "Back" %}
+    {% if has_organizer %}
+        <form action="" method="post" class="form-horizontal">
+            {% csrf_token %}
+            {{ wizard.management_form }}
+            {% bootstrap_form_errors form %}
+            {% block form %}
+            {% endblock %}
+            <div class="form-group submit-group">
+                {% if wizard.steps.prev %}
+                    <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}"
+                            class="btn btn-default btn-lg pull-left">
+                        {% trans "Back" %}
+                    </button>
+                {% endif %}
+                <button type="submit" class="btn btn-primary btn-save">
+                    {% trans "Continue" %}
                 </button>
-            {% endif %}
-            <button type="submit" class="btn btn-primary btn-save">
-                {% trans "Continue" %}
-            </button>
+            </div>
+        </form>
+    {% else %}
+        <div class="alert alert-danger">
+            {% trans "Every event needs to be created as part of an organizer account. Currently, you do not have access to any organizer accounts." %}
         </div>
-    </form>
+        {% if request.user.is_superuser %}
+            <a href="{% url "control:organizers.add" %}" class="btn btn-default">
+                {% trans "Create a new organizer" %}
+            </a>
+        {% endif %}
+    {% endif %}
 {% endblock %}
