--- a/src/pretix/control/templates/pretixcontrol/vouchers/bulk.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/bulk.html
@@ -13,7 +13,7 @@
             <div class="form-group">
                 <div class="col-md-7 col-sm-12 col-md-offset-3">
                     <div class="input-group">
-                        <input type="text" class="form-control input-xs"
+                        <input type="number" class="form-control input-xs"
                                id="voucher-bulk-codes-num"
                                placeholder="{% trans "Number" %}">
                         <div class="input-group-btn">
