--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -73,6 +73,17 @@
                     You can download your tickets using the buttons below. Please have your ticket ready when entering the event.
                 {% endblocktrans %}
             </div>
+            {% if cart.positions|length > 1 %}
+                <p>
+                    {% trans "Download all tickets at once:" %}
+                    {% for b in download_buttons %}
+                        <a href="{% eventurl event "presale:event.order.download.combined" secret=order.secret order=order.code output=b.identifier %}"
+                                class="btn btn-default btn-sm" data-asyncdownload>
+                            <span class="fa fa-download"></span> {{ b.text }}
+                        </a>
+                    {% endfor %}
+                </p>
+            {% endif %}
         {% elif not download_buttons %}
             <div class="alert alert-info">
                 {% blocktrans trimmed with date=event.settings.ticket_download_date|date:"SHORT_DATE_FORMAT" %}
