--- a/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
@@ -124,7 +124,11 @@
             </div>
             <div class="col-md-4 col-md-offset-4">
                 <button class="btn btn-block btn-primary btn-lg" type="submit">
-                    {% trans "Place binding order" %}
+                    {% if cart.total > 0 %}
+                        {% trans "Place binding order" %}
+                    {% else %}
+                        {% trans "Submit registration" %}
+                    {% endif %}
                 </button>
             </div>
             <div class="clearfix"></div>
