Add invoice logo

--- a/src/pretix/control/templates/pretixcontrol/event/invoicing.html
+++ b/src/pretix/control/templates/pretixcontrol/event/invoicing.html
@@ -17,6 +17,7 @@
             {% bootstrap_field form.invoice_introductory_text layout="horizontal" %}
             {% bootstrap_field form.invoice_additional_text layout="horizontal" %}
             {% bootstrap_field form.invoice_footer_text layout="horizontal" %}
+            {% bootstrap_field form.invoice_logo_image layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-default btn-lg" name="preview" value="preview" formtarget="_blank">
