Add setting to turn off automatic collapsing of variations

--- a/src/pretix/control/templates/pretixcontrol/event/display.html
+++ b/src/pretix/control/templates/pretixcontrol/event/display.html
@@ -10,6 +10,7 @@
             {% bootstrap_field form.primary_color layout="horizontal" %}
             {% bootstrap_field form.logo_image layout="horizontal" %}
             {% bootstrap_field form.frontpage_text layout="horizontal" %}
+            {% bootstrap_field form.show_variations_expanded layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
