Added tabs to the organizer page

--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -91,6 +91,9 @@ h1 .btn-sm {
     }
 }
 
+.organizer-tabs .tab-inner {
+    padding-top: 20px;
+}
 
 .helper-display-inline {
     display: inline !important;
