Add request to organizer_edit_tabs signal and actually send it

--- a/src/pretix/control/templates/pretixcontrol/organizers/detail.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/detail.html
@@ -151,7 +151,7 @@
         {% for title, content in tabs %}
             <div class="tab-pane" id="tab-{{ forloop.index }}">
                 <div class="tab-inner">
-                    {{ field }}
+                    {{ content }}
                 </div>
             </div>
         {% endfor %}
