--- a/src/pretix/control/templates/pretixcontrol/item/create.html
+++ b/src/pretix/control/templates/pretixcontrol/item/create.html
@@ -7,6 +7,7 @@
         <fieldset>
             <legend>{% trans "General information" %}</legend>
             {% bootstrap_field form.name layout="horizontal" %}
+            {% bootstrap_field form.copy_from layout="horizontal" %}
             {% bootstrap_field form.has_variations layout="horizontal" %}
             {% bootstrap_field form.admission layout="horizontal" %}
         </fieldset>
