--- a/src/pretix/control/templates/pretixcontrol/event/live.html
+++ b/src/pretix/control/templates/pretixcontrol/event/live.html
@@ -28,7 +28,7 @@
                 </p>
                 <ul>
                     {% for issue in issues %}
-                        <li>{{ issue }}</li>
+                        <li>{{ issue|safe }}</li>
                     {% endfor %}
                 </ul>
             </div>
