--- a/src/pretix/control/templates/pretixcontrol/events/create_basics.html
+++ b/src/pretix/control/templates/pretixcontrol/events/create_basics.html
@@ -8,6 +8,7 @@
         {% bootstrap_field form.slug layout="horizontal" %}
         {% bootstrap_field form.date_from layout="horizontal" %}
         {% bootstrap_field form.date_to layout="horizontal" %}
+        {% bootstrap_field form.location layout="horizontal" %}
         {% bootstrap_field form.currency layout="horizontal" %}
     </fieldset>
     <fieldset>
