--- a/src/pretix/presale/templates/pretixpresale/base.html
+++ b/src/pretix/presale/templates/pretixpresale/base.html
@@ -24,8 +24,8 @@
         <script type="text/javascript" src="{% static "js/jquery.formset.js" %}"></script>
         <script type="text/javascript" src="{% static "bootstrap/js/bootstrap.js" %}"></script>
         <script type="text/javascript" src="{% static "pretixpresale/js/ui/main.js" %}"></script>
-        <script type="text/javascript" src="{% static "pretixpresale/js/ui/asynctask.js" %}"></script>
-        <script type="text/javascript" src="{% static "pretixpresale/js/ui/asyncdownload.js" %}"></script>
+        <script type="text/javascript" src="{% static "pretixbase/js/asynctask.js" %}"></script>
+        <script type="text/javascript" src="{% static "pretixbase/js/asyncdownload.js" %}"></script>
         <script type="text/javascript" src="{% static "pretixpresale/js/ui/cart.js" %}"></script>
         <script type="text/javascript" src="{% static "lightbox/js/lightbox.min.js" %}"></script>
     {% endcompress %}
