--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -142,6 +142,14 @@ h1 .btn-sm {
     }
 }
 
+body.loading #wrapper {
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -ms-filter: blur(2px);
+    -o-filter: blur(2px);
+    filter: blur(2px);
+}
+
 #loadingmodal, #ajaxerr {
     position: fixed;
     top: 0;
@@ -153,6 +161,7 @@ h1 .btn-sm {
     text-align: center;
     z-index: 900000;
     visibility: hidden;
+    padding: 10px;
 
     .big-icon {
         margin-top: 50px;
