--- a/src/pretix/presale/templates/pretixpresale/event/waitinglist.html
+++ b/src/pretix/presale/templates/pretixpresale/event/waitinglist.html
@@ -17,8 +17,8 @@
             <div class="form-group">
                 <div class="col-md-9 col-md-offset-3">
                     <div class="help-block">
-                        {% blocktrans trimmed %}
-                            If tickets become available again, we will inform the first persons on the waiting list. If we notify you, you'll have 48 hours time to buy a ticket until we assign it to the next person on the list.
+                        {% blocktrans trimmed with hours=event.settings.waiting_list_hours %}
+                            If tickets become available again, we will inform the first persons on the waiting list. If we notify you, you'll have {{ hours }} hours time to buy a ticket until we assign it to the next person on the list.
                         {% endblocktrans %}
                     </div>
                     <button type="submit" class="btn btn-primary">
